--- a/bo.html
+++ b/bo.html
@@ -17,7 +17,7 @@
 <body>
     <!--=======================================NAV============================================-->
     <nav class="text-center">
-        <img class="px-1" src="/assets/img/booticons.jpg" alt="error">
+        <img class="img-fluid px-1" src="/assets/img/booticons.jpg" alt="error">
         <a class="px-2" href="#">Docs</a>
         <a class="px-2" href="#">Examples</a>
         <a class="px-2" href="#">Icons</a>
@@ -365,7 +365,7 @@
                     components.
                 </p>
                 <br>
-                <img id="netgear" src="/assets/img/netgear.jpg" alt="">
+                <img class="img-fluid" id="netgear" src="/assets/img/netgear.jpg" alt="">
 
                 <p class="p-5">The .focus-ring helper removes the default outline on :focus, replacing it with a
                     box-shadow that can be more broadly customized. The new shadow is made up of a series of CSS
@@ -375,7 +375,7 @@
                     press Tab.
 
                 </p>
-                <img id="custfo" src="/assets/img/customfoc.jpg" alt="">
+                <img class="img-fluid" id="custfo" src="/assets/img/customfoc.jpg" alt="">
 
                 <h3>Customize</h3>
                 <p>
@@ -387,24 +387,24 @@
                 <p>
                     Modify the --bs-focus-ring-* CSS variables as needed to change the default appearance.
                 </p>
-                <img id="greenfo" src="/assets/img/greenfo.jpg" alt="">
+                <img class="img-fluid" id="greenfo" src="/assets/img/greenfo.jpg" alt="">
                 <p>
                     .focus-ring sets styles via global CSS variables that can be overridden on any parent element, as
                     shown above. These variables are generated from their Sass variable counterparts.
                 </p>
-                <img id="scss" src="/assets/img/scss.jpg" alt="">
+                <img class="img-fluid" id="scss" src="/assets/img/scss.jpg" alt="">
                 <p>
                     By default, there is no --bs-focus-ring-x, --bs-focus-ring-y, or --bs-focus-ring-blur, but we
                     provide CSS variables with fallbacks to initial 0 values. Modify them to change the default
                     appearance.
                 </p>
-                <img id="blurry" src="/assets/img/blurry.jpg" alt="">
+                <img class="img-fluid" id="blurry" src="/assets/img/blurry.jpg" alt="">
                 <h3>Sass variables</h3>
                 <p>
                     Customize the focus ring Sass variables to modify all usage of the focus ring styles across your
                     Bootstrap-powered project.
                 </p>
-                <img id="scss" src="/assets/img/scs.jpg" alt="">
+                <img class="img-fluid" id="scss" src="/assets/img/scs.jpg" alt="">
                 <h3>Sass utilities API </h3>
                 <p>
                     In addition to .focus-ring, we have several .focus-ring-* utilities to modify the helper class
@@ -423,13 +423,12 @@
                         <li class="pb-3"> <a id="btn" class="btn btn-sm btn-bd-light rounded-2">Dark focus</a></li>
                     </ul>
                 </div>
-                <img id="html" class="pt-4" src="/assets/img/html.jpg" alt="">
+                <img id="html" class="img-fluid pt-4" src="/assets/img/html.jpg" alt="">
                 <p>
                     Focus ring utilities are declared in our utilities API in scss/_utilities.scss. Learn how to use the
                     utilities API.
                 </p>
-                <img id="scss" src="/assets/img/sc.jpg" alt="">
-
+                <img class="img-fluid" id="scss" src="/assets/img/sc.jpg" alt="">
             </div>
             <!--======================/centre===============================-->
 
@@ -456,7 +455,7 @@
     <div id="footer" class="container-fluid">
         <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-md-3">
+            <div class="col-12 col-md-3">
 
                 <h6 class="fs-5"><svg xmlns="http://www.w3.org/2000/svg" height="3em" viewBox="0 0 576 512">
                         <style>
@@ -481,7 +480,7 @@
                 </p>
 
             </div>
-            <div class="col-md-1">
+            <div class="col-6 col-md-1">
                 <h5>Links</h5>
                 <ul>
                     <li>Home</li>
@@ -493,7 +492,7 @@
                     <li>Swag store</li>
                 </ul>
             </div>
-            <div class="col-md-1">
+            <div class="col-6 col-md-1">
                 <h5>Guides</h5>
                 <ul>
                     <li>Getting started</li>
@@ -503,7 +502,7 @@
                     <li>Vite</li>
                 </ul>
             </div>
-            <div class="col-md-1">
+            <div class="col-6 col-md-1">
                 <h5>Projects</h5>
                 <ul>
                     <li>Bootstrap 5</li>
@@ -513,7 +512,7 @@
                     <li>Example repo</li>
                 </ul>
             </div>
-            <div class="col-md-2">
+            <div class="col-6 col-md-2">
                 <h5>Community</h5>
                 <ul>
                     <li>issues</li>
